samples/syntaxError/good.c
int main()
{
#ifndef A
#endif
    return 0;
}
